# TP-POO

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  Terminal.cpp  Terminal.h  utils.cpp  utils.h
Classes/: Aparelho.cpp  Aparelho.h  AparelhoAquecedor.cpp  AparelhoAquecedor.h  AparelhoAspersor.cpp  AparelhoAspersor.h  AparelhoLampada.cpp  AparelhoLampada.h  AparelhoRefrigerador.cpp  AparelhoRefrigerador.h  Aparelhos.cpp  Aparelhos.h  Commands.cpp  Commands.h  Componente.cpp  Componente.h  Habitacao.cpp  Habitacao.h  Interface.cpp  Interface.h  Processador.cpp  Processador.h  Processor.cpp  Processor.h  Propriedade.cpp  Propriedade.h  PropriedadeFumo.cpp  PropriedadeFumo.h  PropriedadeHumidade.cpp  PropriedadeHumidade.h  PropriedadeLuz.cpp  PropriedadeLuz.h  PropriedadeRadiacao.cpp  PropriedadeRadiacao.h  PropriedadeSom.cpp  PropriedadeSom.h  PropriedadeTemperatura.cpp  PropriedadeTemperatura.h  PropriedadeVibracao.cpp  PropriedadeVibracao.h  (+36 more)
